--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "dependencies/lua"]
 	path = dependencies/lua
 	url = https://github.com/LuaDist/lua.git
+[submodule "dependencies/parserlib"]
+	path = dependencies/parserlib
+	url = git@github.com:axilmar/parserlib.git
