add configuration for generate city and remove unnecessary classes and resources

--- a/resources/config/config
+++ b/resources/config/config
@@ -4,6 +4,13 @@ Graph.Metrics.NodeDegreeWeigth=0.2
 Graph.Metrics.Regexp=*.com
 Graph.Metrics.RgexpWeigth=1
 Graph.Metrics.ViewMetrics=0
+City.Floor.MinHeight=0.15
+City.Floor.DivideBorderStickUp=0.1
+City.Floor.DivideBorderHeight=0.1
+City.Building.DefaultBaseSize=1.0
+City.Building.DefaultRoofHeight=0.3
+City.Residence.SectorPlaneHeight=0.2
+City.Residence.BuildingSpacing=0.5
 GraphMLParser.edgeTypeAttribute=relation
 GraphMLParser.nodeTypeAttribute=type
 Layout.Thread.ProcessSleepTime=0
