add shape for java root node and package, caption for buildings

--- a/resources/config/config
+++ b/resources/config/config
@@ -9,6 +9,8 @@ City.Floor.DivideBorderStickUp=0.1
 City.Floor.DivideBorderHeight=0.1
 City.Building.DefaultBaseSize=1.0
 City.Building.DefaultRoofHeight=0.3
+City.Building.CaptionCharacterSize=3.0
+City.Building.CaptionOffset=0.3
 City.Residence.SectorPlaneHeight=0.2
 City.Residence.BuildingSpacing=0.5
 GraphMLParser.edgeTypeAttribute=relation
@@ -39,6 +41,7 @@ Viewer.Textures.Edge=../share/3dsoftviz/img/textures/Edge2.png
 Viewer.Textures.EdgeScale=2
 Viewer.Textures.Node=../share/3dsoftviz/img/textures/node2.png
 Viewer.Textures.JavaNode=../share/3dsoftviz/img/textures/java.png
+Viewer.Textures.JavaPackageNode=../share/3dsoftviz/img/textures/javaPackage.jpg
 Viewer.Textures.RemoveNode=../share/3dsoftviz/img/textures/Redcross.png
 Viewer.Textures.OrientedEdge=../share/3dsoftviz/img/textures/OrientedEdge.png
 Viewer.Textures.OrientedEdgePrefix=../share/3dsoftviz/img/textures/arrows/arrow
