--- a/resources/config/config
+++ b/resources/config/config
@@ -31,6 +31,8 @@ Viewer.Display.NodeDistanceScale=2
 Viewer.Display.NodesAlwaysOnTop=0
 Viewer.Display.Stereoscopic=0
 Viewer.Display.ViewDistance=10000.0
+Viewer.HUD.Width=200
+Viewer.HUD.Height=300
 Viewer.Labels.Font=../share/3dsoftviz/fonts/OpenSans-Regular.ttf
 Viewer.PickHandler.PickedEdgeDistance=200.0
 Viewer.Textures.DefaultNodeScale=8
